# RepoScribeAI

./: .gitignore  README.md  pyproject.toml  run.bat
app/: __init__.py  analyzer.py  code_parser.py  doc_generator.py  llm_manager.py  rag_engine.py  repo_loader.py
ui/: __init__.py  settings_page.py  streamlit_app.py
utils/: __init__.py  env_manager.py  file_utils.py
